@@ -1,3 +1,8 @@
+2023-08-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* support/regression/tests/charconst.c,
+	  support/regression/tests/wchar.c.in: disable for MacOS host test
+
 2023-08-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* support/regression/tests/bug-2855.c: disable for MacOS host test
